<resources>
    <string name="app_name">Ardi</string>
    <string name="action_settings">Settings</string>

    <string name="my_page">My Page</string>
    <string name="calculator">ARDI Quote</string>
    <string name="ardimedi">Ardimedi</string>
    <string name="ardi_sos">ARDI SOS</string>
    <string name="ardi_card">ARDI Card</string>
    <string name="zarali">Claims</string>
    <string name="info">Useful Info</string>
    <string name="contacct">Contacts</string>
    <string name="main">Home</string>
    <string name="language">ENG</string>
    <string name="title_activity_my_page">MyPage</string>
    <string name="authotization">რეგისტრაცია</string>
    <string name="title_activity_registration">Registration</string>


    <string name="enter">Enter</string>
    <string name="authorization">Authorization</string>
    <string name="forget_password">Forget password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="id">Personal ID</string>
    <string name="mobile">Mobile</string>
    <string name="e_mail">e-mail</string>
    <string name="policy_number">Policy number</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="registration">Registration</string>

</resources>
