<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ge.ardi.mobapp.Registration"
    tools:showIn="@layout/activity_registration">


    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="@drawable/main_title_rounded"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="goBackListener"
            android:src="@drawable/backicon"
            app:layout_heightPercent="5%"
            app:layout_widthPercent="7%" />

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back_button"
            android:onClick="goBackListener"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/registration"
            android:textColor="#fff"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/main_title_language_rounded"
            android:onClick="changeLanguage"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/language"
            android:textColor="#fff"
            android:textSize="28dp" />
    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/first_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="20%">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/first_name"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/last_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_view"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/last_name"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/calendar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_view"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/registration_fields">

            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/birthday"
                android:onClick="onClickCalendar"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:textColor="#000"
                android:textSize="24dp" />

        </RelativeLayout>


    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/personal_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar_view"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">

        <EditText
            android:id="@+id/personal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/id"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/mobile_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_number_view"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">

        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/mobile"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>

    <!--down-->


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/mail_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="20%">

        <EditText
            android:id="@+id/entered_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/e_mail"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/policy_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail_view"
        android:visibility="invisible"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">

        <EditText
            android:id="@+id/entered_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/policy_number"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/user_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/policy_view"
        android:visibility="invisible"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">


        <EditText
            android:id="@+id/entered_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/user"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />


    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_view"
        android:visibility="invisible"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">

        <EditText
            android:id="@+id/entered_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/password"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/password_confirm_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_view"
        android:visibility="invisible"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">

        <EditText
            android:id="@+id/entered_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_fields"
            android:hint="@string/confirm_password"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/next_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_confirm_view"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="7%">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_auto"
            android:onClick="onClickOnNext">

            <TextView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#A7D157"
                android:onClick="onClickOnNext"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/next"
                android:textColor="#fff"
                android:textSize="28dp" />

        </RelativeLayout>


    </android.support.percent.PercentRelativeLayout>


</android.support.percent.PercentRelativeLayout>
