<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ge.ardi.mobapp.MyPage"
    tools:showIn="@layout/activity_my_page">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_title_rounded"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="goBackListener"
            android:src="@drawable/backicon"
            app:layout_heightPercent="5%"
            app:layout_widthPercent="7%" />

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back_button"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/authorization"
            android:textColor="#fff"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/main_title_language_rounded"
            android:onClick="changeLanguage"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/language"
            android:textColor="#fff"
            android:textSize="28dp" />
    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/user_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_auto"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="25%">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="12dp"
            android:src="@drawable/usericon"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="10%" />


        <EditText
            android:id="@+id/entered_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/user_icon"
            android:background="@drawable/text_view_border"
            android:hint="@string/user"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:textColor="#000"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/password_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_part"
        android:background="@drawable/login_auto"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="2%">

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="12dp"
            android:src="@drawable/lockicon"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="10%" />


        <EditText
            android:id="@+id/entered_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/password_icon"
            android:background="@drawable/text_view_border"
            android:hint="@string/password"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:textColor="#000"
            android:textSize="24dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/login_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_part"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_auto">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#A7D157"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/enter"
                android:textColor="#fff"
                android:textSize="28dp" />

        </RelativeLayout>


    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/registration_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="2%">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_auto">

            <TextView
                android:id="@+id/registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="goToRegistration"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/registration"
                android:textColor="#fff"
                android:textSize="28dp" />

        </RelativeLayout>


    </android.support.percent.PercentRelativeLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_view"
        android:layout_centerHorizontal="true"
        android:paddingTop="12dp"
        android:text="@string/forget_password"
        android:textColor="#fff"
        android:textSize="16dp" />


</android.support.percent.PercentRelativeLayout>
