<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ge.ardi.mobapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <!--   <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/main_title_rounded"
               android:paddingBottom="8dp"
               android:paddingLeft="8dp"
               android:paddingRight="70dp"
               android:paddingTop="8dp"
               android:text="@string/main"
               android:textColor="#FFF"
               android:textSize="28dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/main_title_language_rounded"
               android:paddingBottom="8dp"
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
               android:paddingTop="8dp"
               android:text="@string/ka"
               android:textColor="#FFF"
               android:textSize="28dp" />
       </LinearLayout>-->


    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_title_rounded"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%">

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/main"
            android:textColor="#fff"
            android:textSize="28dp" />


        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/main_title_language_rounded"
            android:onClick="onClickLang"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/language"
            android:textColor="#fff"
            android:textSize="28dp" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/my_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:onClick="myPageListener"
        app:layout_heightPercent="16%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginTopPercent="15%"
        app:layout_widthPercent="36%">

        <ImageView
            android:id="@+id/my_page_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="myPageListener"
            android:src="@drawable/my_page"
            app:layout_heightPercent="60%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/my_page_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_page_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/my_page"
            android:textColor="#FFF" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/ardimedi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_page"
        android:background="@drawable/button_rounded"
        app:layout_heightPercent="16%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="36%">

        <ImageView
            android:id="@+id/ardimedi_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@drawable/ardimedi"
            app:layout_heightPercent="60%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/ardimedi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ardimedi_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/ardimedi"
            android:textColor="#FFF" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ardimedi"
        android:background="@drawable/button_rounded"
        android:paddingBottom="8dp"
        app:layout_heightPercent="16%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="36%">

        <ImageView
            android:id="@+id/sos_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@drawable/ardi_sos"
            app:layout_heightPercent="60%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/sos_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sos_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/ardi_sos"
            android:textColor="#FFF" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sos"
        android:background="@drawable/button_rounded"
        android:paddingBottom="8dp"
        app:layout_heightPercent="16%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="36%">

        <ImageView
            android:id="@+id/info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@drawable/info"
            app:layout_heightPercent="60%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/info"
            android:textColor="#FFF" />

    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_rounded"
        app:layout_heightPercent="16%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="15%"
        app:layout_widthPercent="36%">

        <ImageView
            android:id="@+id/calculator_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@drawable/calculator"
            app:layout_heightPercent="60%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/calculator_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calculator_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/calculator"
            android:textColor="#FFF" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/ardicard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/calculator"
        android:background="@drawable/button_rounded"
        app:layout_heightPercent="16%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="36%">

        <ImageView
            android:id="@+id/ardicard_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@drawable/ardi_card"
            app:layout_heightPercent="60%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/ardicard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ardicard_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/ardi_card"
            android:textColor="#FFF" />

    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/zarali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ardicard"
        android:background="@drawable/button_rounded"
        app:layout_heightPercent="16%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="36%">

        <ImageView
            android:id="@+id/zarali_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@drawable/zarali"
            app:layout_heightPercent="60%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/zarali_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zarali_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/zarali"
            android:textColor="#FFF" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/cntact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/zarali"
        android:background="@drawable/button_rounded"
        app:layout_heightPercent="16%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="36%">

        <ImageView
            android:id="@+id/cntact_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@drawable/contact"
            app:layout_heightPercent="60%"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%" />

        <TextView
            android:id="@+id/contact_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cntact_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/contacct"
            android:textColor="#FFF" />

    </android.support.percent.PercentRelativeLayout>


</android.support.percent.PercentRelativeLayout>


